# kane

./: .env  .env.example  .env.production  .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
app/: main.py
app/api/auth/: jwt.py  routes.py
app/api/chat/: routes.py
app/api/chatbots/: routes.py
src/: App.tsx  env.d.ts  firebase.ts  vite-env.d.ts
src/components/: PrivateRoute.tsx  PublicRoute.tsx
src/contexts/: AuthContext.tsx
src/pages/: LoginPage.tsx  SelectPage.tsx
src/services/: api.ts
src/types/: firebase.d.ts  index.ts
